@@ -126,19 +126,8 @@ fi
 %doc /usr/share/doc/freeipmi/NEWS
 %doc /usr/share/doc/freeipmi/README
 %doc /usr/share/doc/freeipmi/TODO
-%doc /usr/share/doc/freeipmi/authors.texi
-%doc /usr/share/doc/freeipmi/fdl.texi
-%doc /usr/share/doc/freeipmi/freeipmi.texi
-%doc /usr/share/doc/freeipmi/gpl.texi
 %doc /usr/share/doc/freeipmi/ipmi-over-ts2000.texi
-%doc /usr/share/doc/freeipmi/permissions.texi
-%doc /usr/share/doc/freeipmi/version.texi
 %doc /usr/share/info/freeipmi.info*
-%doc /usr/share/info/freeipmi.info-1*
-%doc /usr/share/info/freeipmi.info-2*
-%doc /usr/share/info/freeipmi.info-3*
-%doc /usr/share/info/freeipmi.info-4*
-%doc /usr/share/info/freeipmi.info-5*
 /usr/lib/*so*
 /var/lib/
  
