@@ -1,3 +1,8 @@
+2004-10-25  Albert Chu <chu11@llnl.gov>
+
+	* freeipmi.spec.in: Additional file packaging changes based on
+	recent changes to doc installation.
+	
 2004-10-25  Ian Zimmerman  <itz@californiadigital.com>
 
 	* bmc-watchdog/src/bmc-watchdog.c (_get_port): probe for KCS
